[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/anima/ui/nodes_popup.gd" type="Script" id=1]

[node name="NodesPopup" type="PopupPanel"]
margin_right = -0.280029
margin_bottom = -3.05176e-05
rect_min_size = Vector2( 260, 320 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 252.0
margin_bottom = 30.0

[node name="SearchField" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 199.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 252.0
margin_bottom = 30.0
text = "Clear"

[node name="NodesList" type="ItemList" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 252.0
margin_bottom = 312.0
size_flags_vertical = 3

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/SearchField" to="." method="_on_SearchField_text_changed"]
